[gd_scene format=3 uid="uid://cbb3or5xy2s23"]

[ext_resource type="Script" uid="uid://dpgpmdqf1ujcv" path="res://scenes/options/options.gd" id="1_qe4tn"]
[ext_resource type="Texture2D" uid="uid://bklv3paxl4ncp" path="res://scenes/options/music_volume.png" id="2_kmbin"]
[ext_resource type="Texture2D" uid="uid://cw64gj4h8f10m" path="res://scenes/options/sfx_volume.png" id="3_025dt"]
[ext_resource type="Texture2D" uid="uid://d1bfdk3jjcj1q" path="res://scenes/options/shaders.png" id="4_bcrey"]
[ext_resource type="Theme" uid="uid://3cs1r4p0rltc" path="res://assets/themes/invisible_button.tres" id="5_g56r3"]
[ext_resource type="Texture2D" uid="uid://bcfrb24n5gbhi" path="res://scenes/options/exit.png" id="6_f2ajo"]
[ext_resource type="PackedScene" uid="uid://b5y6knc366bb8" path="res://scenes/title/title_background.tscn" id="7_f2ajo"]

[node name="Options" type="Control" unique_id=1889841919]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qe4tn")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=860936264]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 600
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 600
theme_override_constants/margin_bottom = 250

[node name="Button Container" type="VBoxContainer" parent="MarginContainer" unique_id=1319436529]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Music Volume" type="HBoxContainer" parent="MarginContainer/Button Container" unique_id=1175705195]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 4

[node name="Music font" type="TextureRect" parent="MarginContainer/Button Container/Music Volume" unique_id=1976013847]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
texture = ExtResource("2_kmbin")
expand_mode = 3

[node name="Music Volume Slider" type="HSlider" parent="MarginContainer/Button Container/Music Volume" unique_id=320298058]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 10
max_value = 1.0
step = 0.01

[node name="SFX Volume" type="HBoxContainer" parent="MarginContainer/Button Container" unique_id=148994208]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 4

[node name="SFX font" type="TextureRect" parent="MarginContainer/Button Container/SFX Volume" unique_id=2087516884]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
texture = ExtResource("3_025dt")
expand_mode = 3

[node name="SFX Volume Slider" type="HSlider" parent="MarginContainer/Button Container/SFX Volume" unique_id=314521187]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 10
max_value = 1.0
step = 0.01

[node name="Enable Shaders" type="HBoxContainer" parent="MarginContainer/Button Container" unique_id=932044254]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 4

[node name="Enable Shaders Font" type="TextureRect" parent="MarginContainer/Button Container/Enable Shaders" unique_id=2033958027]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_bcrey")
expand_mode = 5
stretch_mode = 5

[node name="Enable Shaders Check" type="CheckBox" parent="MarginContainer/Button Container/Enable Shaders" unique_id=367317184]
custom_minimum_size = Vector2(20, 100)
layout_mode = 2
size_flags_horizontal = 10

[node name="Back" type="MarginContainer" parent="MarginContainer/Button Container" unique_id=977032604]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="Close menu" type="Button" parent="MarginContainer/Button Container/Back" unique_id=2034654639]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5_g56r3")
icon = ExtResource("6_f2ajo")
icon_alignment = 1
expand_icon = true

[node name="Quit Game" type="MarginContainer" parent="MarginContainer/Button Container" unique_id=1925582543]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="Quit game" type="Button" parent="MarginContainer/Button Container/Quit Game" unique_id=789500337]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5_g56r3")
icon = ExtResource("6_f2ajo")
icon_alignment = 1
expand_icon = true

[node name="Title Background" parent="." unique_id=1148979379 instance=ExtResource("7_f2ajo")]

[connection signal="mouse_entered" from="MarginContainer/Button Container/Music Volume/Music font" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/Button Container/Music Volume/Music font" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/Button Container/Music Volume/Music Volume Slider" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/Button Container/Music Volume/Music Volume Slider" to="." method="_on_mouse_leave"]
[connection signal="value_changed" from="MarginContainer/Button Container/Music Volume/Music Volume Slider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="mouse_entered" from="MarginContainer/Button Container/SFX Volume/SFX font" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/Button Container/SFX Volume/SFX font" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/Button Container/SFX Volume/SFX Volume Slider" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/Button Container/SFX Volume/SFX Volume Slider" to="." method="_on_mouse_leave"]
[connection signal="value_changed" from="MarginContainer/Button Container/SFX Volume/SFX Volume Slider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="mouse_entered" from="MarginContainer/Button Container/Enable Shaders/Enable Shaders Font" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/Button Container/Enable Shaders/Enable Shaders Font" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/Button Container/Back/Close menu" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/Button Container/Back/Close menu" to="." method="_on_mouse_leave"]
[connection signal="pressed" from="MarginContainer/Button Container/Back/Close menu" to="." method="_on_exit_game_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Button Container/Quit Game/Quit game" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/Button Container/Quit Game/Quit game" to="." method="_on_mouse_leave"]
[connection signal="pressed" from="MarginContainer/Button Container/Quit Game/Quit game" to="." method="_on_exit_game_pressed"]
